# GeneralizIT

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  methods.html  paper.bib  paper.md  pyproject.toml  styles.css  test.py  tutorial.html
.github/workflows/: docs.yml
GeneralizIT/: GeneralizIT.py  design.py  design2.py  design4.py  design5.py  design6.py  design7.py  design8.py  design_utils.py  designcrossed.py
docs/source/: api.rst  conf.py  index.rst
documentation/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
documentation/_modules/: index.html
documentation/_modules/generalizit/: design.html  design_utils.html  g_theory_utils.html  generalizit.html
generalizit/: __init__.py  design.py  design5.py  design6.py  design7.py  design8.py  design_utils.py  g_theory_utils.py  generalizit.py
tests/: README.md  conftest.py  design_test_base.py  test_design_utils.py  testdesign.py
tests/balanced_designs/crossed_designs/: test_design1.py  test_design3.py
tests/balanced_designs/nested_designs/: test_design2.py  test_design4.py  test_design5.py  test_design6.py  test_design7.py  test_design8.py
tests/fixtures/: design1_fixtures.py  design1_missing_fixtures.py  design2_fixtures.py  design3_fixed_fixtures.py  design3_fixtures.py  design4_fixed_fixtures.py  design4_fixtures.py  design4_unbalanced_fixtures.py  design5_fixtures.py  design6_fixtures.py  design7_fixtures.py  design8_fixtures.py
tests/nested_designs/: test_design2.py  test_design4.py  test_design7.py
tests/unbalanced_missing_designs/missing_designs/: test_design1_missing.py
tests/unbalanced_missing_designs/unbalanced_designs/: test_design4_unbalanced.py
tutorials/: generalizability_methods_tutorial.md  generalizit_tutorial.ipynb  mnist_variance_tutorial.ipynb
