[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["generalizit"]

[project]
name = "generalizit"
version = "0.0.3"
description = "Generalizability theory fully crossed and nested"
keywords = ["generalizability theory", "crossed", "nested"]
readme = "README.md"
authors = [
    {name = "Tyler Smith", email = "tyler.js.smith111@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0"
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--tb=short"
testpaths = ["tests"]

[project.urls]
Issues = "https://github.com/tylerjsmith111/GeneralizIT/issues"
Homepage = "https://github.com/tylerjsmith111/GeneralizIT"